# cppwarrior

./: README.md
CLRS/insertionsort_/: insertionsort  insertionsort.cpp  insertionsortnonincreasing  insertionsortnonincreasing.cpp
crosscompiling/arm-hello/: CMakeLists.txt  hello.cpp
crosscompiling/qt-hello/: CMakeLists.txt  jellies-toolchain.cmake  main.cpp
leetcode/2025_07_02/: README.md
leetcode/2025_07_05/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  solution  solution.cpp
leetcode/2025_07_14/: solution.cpp
randomstuff/aboutarray/: playground  runplayground.sh
randomstuff/aboutarrayandstring/: playground  playground.cpp
randomstuff/aboutownership/: playground.cpp
randomstuff/aboutvoidptr/: playground.cpp
randomstuff/arithmetic/: playground  playground.cpp
randomstuff/arraypointerreference/: playground.cpp
randomstuff/constwestconsteast/: playground  playground.cpp
randomstuff/headeronly/: main  main.cpp
randomstuff/helloworld_/: helloworld  helloworld.cpp  helloworld.donut
randomstuff/makefilemanual/: Makefile  digits.hpp  hello  hello.cpp
randomstuff/makefilewcmake/: CMakeLists.txt  README.md
